--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.81.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
@@ -23,11 +24,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "clsx": "^2.1.1",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.2"
+    "typescript": "^5"
   }
 }
